// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BasicLayout /> should render desktop view correctly 1`] = `
<section
  className="ant-layout"
>
  <header
    className="ant-layout-header"
  >
    <div
      className=""
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <div />
      </a>
      <ul
        className="ant-menu ant-menu-light ant-menu-root ant-menu-horizontal"
        onMouseEnter={[Function]}
        onTransitionEnd={[Function]}
        role="menu"
        style={Object {}}
      >
        <li
          className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="ant-menu-submenu-title"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          >
            <span>
              ···
            </span>
            <i
              className="ant-menu-submenu-arrow"
            />
          </div>
        </li>
        <li
          className="ant-menu-item ant-menu-item-selected"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          全部
        </li>
        <li
          className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="ant-menu-submenu-title"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          >
            <span>
              ···
            </span>
            <i
              className="ant-menu-submenu-arrow"
            />
          </div>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          精华
        </li>
        <li
          className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="ant-menu-submenu-title"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          >
            <span>
              ···
            </span>
            <i
              className="ant-menu-submenu-arrow"
            />
          </div>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          分享
        </li>
        <li
          className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="ant-menu-submenu-title"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          >
            <span>
              ···
            </span>
            <i
              className="ant-menu-submenu-arrow"
            />
          </div>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          问答
        </li>
        <li
          className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="ant-menu-submenu-title"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          >
            <span>
              ···
            </span>
            <i
              className="ant-menu-submenu-arrow"
            />
          </div>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          招聘
        </li>
        <li
          className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "position": "absolute",
              "visibility": "hidden",
            }
          }
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="ant-menu-submenu-title"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          >
            <span>
              ···
            </span>
            <i
              className="ant-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
    </div>
  </header>
  <main
    className="ant-layout-content"
  />
  <div>
    <span
      className="ant-avatar ant-dropdown-trigger ant-avatar-lg ant-avatar-circle"
      onClick={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
    >
      <span
        className="ant-avatar-string"
        style={
          Object {
            "WebkitTransform": "scale(-Infinity) translateX(-50%)",
            "msTransform": "scale(-Infinity) translateX(-50%)",
            "transform": "scale(-Infinity) translateX(-50%)",
          }
        }
      />
    </span>
    <button
      className="ant-btn ant-btn-primary ant-btn-circle ant-btn-lg ant-btn-icon-only"
      onClick={[Function]}
      type="button"
    >
      <i
        aria-label="icon: arrow-up"
        className="anticon anticon-arrow-up"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="arrow-up"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M868 545.5L536.1 163a31.96 31.96 0 0 0-48.3 0L156 545.5a7.97 7.97 0 0 0 6 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
          />
        </svg>
      </i>
    </button>
  </div>
  <footer
    className="ant-layout-footer"
  >
    <span>
      CNode 社区为国内最专业的 Node.js 开源技术社区，致力于 Node.js 的技术研究。
    </span>
    <div>
      <i
        aria-label="icon: api"
        className="anticon anticon-api"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="api"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M917.7 148.8l-42.4-42.4c-1.6-1.6-3.6-2.3-5.7-2.3s-4.1.8-5.7 2.3l-76.1 76.1a199.27 199.27 0 0 0-112.1-34.3c-51.2 0-102.4 19.5-141.5 58.6L432.3 308.7a8.03 8.03 0 0 0 0 11.3L704 591.7c1.6 1.6 3.6 2.3 5.7 2.3 2 0 4.1-.8 5.7-2.3l101.9-101.9c68.9-69 77-175.7 24.3-253.5l76.1-76.1c3.1-3.2 3.1-8.3 0-11.4zM769.1 441.7l-59.4 59.4-186.8-186.8 59.4-59.4c24.9-24.9 58.1-38.7 93.4-38.7 35.3 0 68.4 13.7 93.4 38.7 24.9 24.9 38.7 58.1 38.7 93.4 0 35.3-13.8 68.4-38.7 93.4zm-190.2 105a8.03 8.03 0 0 0-11.3 0L501 613.3 410.7 523l66.7-66.7c3.1-3.1 3.1-8.2 0-11.3L441 408.6a8.03 8.03 0 0 0-11.3 0L363 475.3l-43-43a7.85 7.85 0 0 0-5.7-2.3c-2 0-4.1.8-5.7 2.3L206.8 534.2c-68.9 69-77 175.7-24.3 253.5l-76.1 76.1a8.03 8.03 0 0 0 0 11.3l42.4 42.4c1.6 1.6 3.6 2.3 5.7 2.3s4.1-.8 5.7-2.3l76.1-76.1c33.7 22.9 72.9 34.3 112.1 34.3 51.2 0 102.4-19.5 141.5-58.6l101.9-101.9c3.1-3.1 3.1-8.2 0-11.3l-43-43 66.7-66.7c3.1-3.1 3.1-8.2 0-11.3l-36.6-36.2zM441.7 769.1a131.32 131.32 0 0 1-93.4 38.7c-35.3 0-68.4-13.7-93.4-38.7a131.32 131.32 0 0 1-38.7-93.4c0-35.3 13.7-68.4 38.7-93.4l59.4-59.4 186.8 186.8-59.4 59.4z"
          />
        </svg>
      </i>
      <a
        href="https://cnodejs.org/api"
        rel="noopener noreferrer"
        target="_blank"
      >
        API
      </a>
      <i
        aria-label="icon: github"
        className="anticon anticon-github"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="github"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0 1 38.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
          />
        </svg>
      </i>
      <a
        href="https://github.com/FuNn1esT/react-cnode"
        rel="noopener noreferrer"
        target="_blank"
      >
        项目地址
      </a>
    </div>
  </footer>
</section>
`;

exports[`<BasicLayout /> should render mobile view correctly 1`] = `
<section
  className="ant-layout"
>
  <header
    className="ant-layout-header"
  >
    <div
      className=""
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <div />
      </a>
      <ul
        className="ant-menu ant-menu-light ant-menu-root ant-menu-horizontal"
        onMouseEnter={[Function]}
        onTransitionEnd={[Function]}
        role="menu"
        style={Object {}}
      >
        <li
          className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="ant-menu-submenu-title"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          >
            <span>
              ···
            </span>
            <i
              className="ant-menu-submenu-arrow"
            />
          </div>
        </li>
        <li
          className="ant-menu-item ant-menu-item-selected"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          全部
        </li>
        <li
          className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="ant-menu-submenu-title"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          >
            <span>
              ···
            </span>
            <i
              className="ant-menu-submenu-arrow"
            />
          </div>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          精华
        </li>
        <li
          className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="ant-menu-submenu-title"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          >
            <span>
              ···
            </span>
            <i
              className="ant-menu-submenu-arrow"
            />
          </div>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          分享
        </li>
        <li
          className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="ant-menu-submenu-title"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          >
            <span>
              ···
            </span>
            <i
              className="ant-menu-submenu-arrow"
            />
          </div>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          问答
        </li>
        <li
          className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="ant-menu-submenu-title"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          >
            <span>
              ···
            </span>
            <i
              className="ant-menu-submenu-arrow"
            />
          </div>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          招聘
        </li>
        <li
          className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "position": "absolute",
              "visibility": "hidden",
            }
          }
        >
          <div
            aria-expanded={false}
            aria-haspopup="true"
            className="ant-menu-submenu-title"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          >
            <span>
              ···
            </span>
            <i
              className="ant-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div>
        <ul
          className="ant-menu ant-menu-light ant-menu-root ant-menu-horizontal"
          onMouseEnter={[Function]}
          onTransitionEnd={[Function]}
          role="menu"
          style={Object {}}
        >
          <li
            className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="menuitem"
            style={
              Object {
                "display": "none",
              }
            }
          >
            <div
              aria-expanded={false}
              aria-haspopup="true"
              className="ant-menu-submenu-title"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            >
              <span>
                ···
              </span>
              <i
                className="ant-menu-submenu-arrow"
              />
            </div>
          </li>
          <li
            className="ant-menu-submenu ant-menu-submenu-horizontal"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="menuitem"
          >
            <div
              aria-expanded={false}
              aria-haspopup="true"
              className="ant-menu-submenu-title"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            >
              <span>
                <span
                  className="ant-avatar ant-avatar-sm ant-avatar-circle"
                  style={Object {}}
                >
                  <span
                    className="ant-avatar-string"
                    style={
                      Object {
                        "WebkitTransform": "scale(-Infinity) translateX(-50%)",
                        "msTransform": "scale(-Infinity) translateX(-50%)",
                        "transform": "scale(-Infinity) translateX(-50%)",
                      }
                    }
                  />
                </span>
              </span>
              <i
                className="ant-menu-submenu-arrow"
              />
            </div>
          </li>
          <li
            className="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="menuitem"
            style={
              Object {
                "position": "absolute",
                "visibility": "hidden",
              }
            }
          >
            <div
              aria-expanded={false}
              aria-haspopup="true"
              className="ant-menu-submenu-title"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            >
              <span>
                ···
              </span>
              <i
                className="ant-menu-submenu-arrow"
              />
            </div>
          </li>
        </ul>
      </div>
    </div>
  </header>
  <main
    className="ant-layout-content"
  />
  <div>
    <button
      className="ant-btn ant-btn-primary ant-btn-circle ant-btn-lg ant-btn-icon-only"
      onClick={[Function]}
      type="button"
    >
      <i
        aria-label="icon: arrow-up"
        className="anticon anticon-arrow-up"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="arrow-up"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M868 545.5L536.1 163a31.96 31.96 0 0 0-48.3 0L156 545.5a7.97 7.97 0 0 0 6 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
          />
        </svg>
      </i>
    </button>
  </div>
  <footer
    className="ant-layout-footer"
  >
    <span>
      CNode 社区为国内最专业的 Node.js 开源技术社区，致力于 Node.js 的技术研究。
    </span>
    <div>
      <i
        aria-label="icon: api"
        className="anticon anticon-api"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="api"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M917.7 148.8l-42.4-42.4c-1.6-1.6-3.6-2.3-5.7-2.3s-4.1.8-5.7 2.3l-76.1 76.1a199.27 199.27 0 0 0-112.1-34.3c-51.2 0-102.4 19.5-141.5 58.6L432.3 308.7a8.03 8.03 0 0 0 0 11.3L704 591.7c1.6 1.6 3.6 2.3 5.7 2.3 2 0 4.1-.8 5.7-2.3l101.9-101.9c68.9-69 77-175.7 24.3-253.5l76.1-76.1c3.1-3.2 3.1-8.3 0-11.4zM769.1 441.7l-59.4 59.4-186.8-186.8 59.4-59.4c24.9-24.9 58.1-38.7 93.4-38.7 35.3 0 68.4 13.7 93.4 38.7 24.9 24.9 38.7 58.1 38.7 93.4 0 35.3-13.8 68.4-38.7 93.4zm-190.2 105a8.03 8.03 0 0 0-11.3 0L501 613.3 410.7 523l66.7-66.7c3.1-3.1 3.1-8.2 0-11.3L441 408.6a8.03 8.03 0 0 0-11.3 0L363 475.3l-43-43a7.85 7.85 0 0 0-5.7-2.3c-2 0-4.1.8-5.7 2.3L206.8 534.2c-68.9 69-77 175.7-24.3 253.5l-76.1 76.1a8.03 8.03 0 0 0 0 11.3l42.4 42.4c1.6 1.6 3.6 2.3 5.7 2.3s4.1-.8 5.7-2.3l76.1-76.1c33.7 22.9 72.9 34.3 112.1 34.3 51.2 0 102.4-19.5 141.5-58.6l101.9-101.9c3.1-3.1 3.1-8.2 0-11.3l-43-43 66.7-66.7c3.1-3.1 3.1-8.2 0-11.3l-36.6-36.2zM441.7 769.1a131.32 131.32 0 0 1-93.4 38.7c-35.3 0-68.4-13.7-93.4-38.7a131.32 131.32 0 0 1-38.7-93.4c0-35.3 13.7-68.4 38.7-93.4l59.4-59.4 186.8 186.8-59.4 59.4z"
          />
        </svg>
      </i>
      <a
        href="https://cnodejs.org/api"
        rel="noopener noreferrer"
        target="_blank"
      >
        API
      </a>
      <i
        aria-label="icon: github"
        className="anticon anticon-github"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="github"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0 1 38.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
          />
        </svg>
      </i>
      <a
        href="https://github.com/FuNn1esT/react-cnode"
        rel="noopener noreferrer"
        target="_blank"
      >
        项目地址
      </a>
    </div>
  </footer>
</section>
`;

exports[`<FloatingMenu /> should render LoginMenu 1`] = `
<div>
  <span
    className="ant-avatar ant-avatar-lg ant-avatar-circle"
    onClick={[MockFunction]}
    style={Object {}}
  >
    <span
      className="ant-avatar-string"
      style={
        Object {
          "WebkitTransform": "scale(-Infinity) translateX(-50%)",
          "msTransform": "scale(-Infinity) translateX(-50%)",
          "transform": "scale(-Infinity) translateX(-50%)",
        }
      }
    >
      登录
    </span>
  </span>
  <button
    className="ant-btn ant-btn-primary ant-btn-circle ant-btn-lg ant-btn-icon-only"
    onClick={[Function]}
    type="button"
  >
    <i
      aria-label="icon: arrow-up"
      className="anticon anticon-arrow-up"
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="arrow-up"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M868 545.5L536.1 163a31.96 31.96 0 0 0-48.3 0L156 545.5a7.97 7.97 0 0 0 6 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
        />
      </svg>
    </i>
  </button>
</div>
`;

exports[`<FloatingMenu /> should render Post 1`] = `
<div>
  <span
    className="ant-avatar ant-dropdown-trigger ant-avatar-lg ant-avatar-circle"
    onClick={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
    style={Object {}}
  >
    <span
      className="ant-avatar-string"
      style={
        Object {
          "WebkitTransform": "scale(-Infinity) translateX(-50%)",
          "msTransform": "scale(-Infinity) translateX(-50%)",
          "transform": "scale(-Infinity) translateX(-50%)",
        }
      }
    />
  </span>
  <button
    className="ant-btn ant-btn-primary ant-btn-circle ant-btn-lg ant-btn-icon-only"
    onClick={[Function]}
    type="button"
  >
    <i
      aria-label="icon: edit"
      className="anticon anticon-edit"
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="edit"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 0 0 0-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 0 0 9.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </i>
  </button>
  <button
    className="ant-btn ant-btn-primary ant-btn-circle ant-btn-lg ant-btn-icon-only"
    onClick={[Function]}
    type="button"
  >
    <i
      aria-label="icon: arrow-up"
      className="anticon anticon-arrow-up"
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="arrow-up"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M868 545.5L536.1 163a31.96 31.96 0 0 0-48.3 0L156 545.5a7.97 7.97 0 0 0 6 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
        />
      </svg>
    </i>
  </button>
</div>
`;
